# tfbindiff

./: Cargo.toml  LICENSE  flake.nix
src/: compare.rs  eh_frame.rs  instruction_wrapper.rs  lib.rs  main.rs  matcher.rs  output.rs  program.rs  split_diff.rs  util.rs
src/gui/: mod.rs
