[package]
name = "tfbindiff"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
leb128 = "0.2.5"
object = "0.31.1"
cpp_demangle = "0.4.3"
iced-x86 = "1.20.0"
thiserror = "1.0.48"
num_enum = "0.7.0"
memmap2 = "0.7.1"
rayon = "1.8.0"
regex-lite = "0.1.5"
once_cell = "1.18.0"
