[package]
name = "tfbindiff"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
leb128 = "0.2.5"
object = "0.32.1"
cpp_demangle = "0.4.3"
iced-x86 = "1.20.0"
once_cell = "1.18.0"
thiserror = "1.0.50"
num_enum = "0.7.1"
memmap2 = "0.9.0"
rayon = "1.8.0"
regex-lite = "0.1.5"
similar = "2.3.0"
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = "0.23.0"
itertools = "0.12.0"
