[package]
name = "tfbindiff"
version = "0.1.0"
license = "MIT"
edition = "2021"

[[bin]]
name = "tfbindiff"
path = "src/bin/gui/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
leb128 = "0"
object = "0"
cpp_demangle = "0"
iced-x86 = "1"
once_cell = "1"
thiserror = "1"
num_enum = "0"
memmap2 = "0"
regex-lite = "0"
similar = "2"
egui = "0"
eframe = "0"
egui_extras = "0"
itertools = "0"
